--- a/Assets/Tests_EditMode/Tests_EditMode.asmdef
+++ b/Assets/Tests_EditMode/Tests_EditMode.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "Assets.Library"
+        "Assets.Library",
+        "Assets.Scripts"
     ],
     "includePlatforms": [
         "Editor"
